src/objects/Map_Information__c.object
<CustomObject>
    <description>The map information specifies the map template and additional graphic settings for a given parent object.</description>
    <fields>
        <fullName>Extra_Data__c</fullName>
        <description>Extra data for future expansion.</description>
        <label>Extra Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Field__c</fullName>
        <description>Extra field for future expansion.</description>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Flag1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map_Storage__c</fullName>
        <description>This is an XML BLOB that stores additional information about this particular map, including bubble location, various settings, and extra arrows or comments.</description>
        <label>Map Storage</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Map_Template_Link__c</fullName>
        <label>Map Template Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Over1__c</fullName>
        <label>Over1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Over2__c</fullName>
        <label>Over2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Over3__c</fullName>
        <label>Over3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Link__c</fullName>
        <label>Parent Object Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Map Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Map Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>